--- a/notes_of_python_for_data_analysis.ipynb
+++ b/notes_of_python_for_data_analysis.ipynb
@@ -2153,6 +2153,407 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# functions are objects !!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### str.strip() returns a copy of the string with the leading and trailing characters removed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### str.title() returns a copy of the string in which first characters of all the words are capitalized."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "def remove_punctuation(value):\n",
+    "    return re.sub('[!#?]', '', value)\n",
+    "\n",
+    "clean_options = [str.strip, remove_punctuation, str.title]\n",
+    "\n",
+    "def clean_strings(strings, options):\n",
+    "    result = []\n",
+    "    for value in strings:\n",
+    "        for function in options:\n",
+    "            value = function(value)\n",
+    "        result.append(value)\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Alabama',\n",
+       " 'Georgia',\n",
+       " 'Georgia',\n",
+       " 'Georgia',\n",
+       " 'Florida',\n",
+       " 'South   Carolina',\n",
+       " 'West Virginia']"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "states = ['   Alabama ', 'Georgia!', 'Georgia', 'georgia', 'FlOrIda', \n",
+    "          'south   carolina##', 'West virginia?']\n",
+    "\n",
+    "result = clean_strings(states, clean_options)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generators\n",
+    "### returns a sequence of multiple results lazily, pausing after each one until the next one is requested."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generate from 0 to 10 is requested.\n",
+      "0 1 4 9 16 25 36 49 64 81 "
+     ]
+    }
+   ],
+   "source": [
+    "def square(n=10):\n",
+    "    print('Generate from 0 to {0} is requested.'.format(n))\n",
+    "    for i in range(10):\n",
+    "        yield i ** 2\n",
+    "        \n",
+    "gen = square()\n",
+    "\n",
+    "for i in gen:\n",
+    "    print(i, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Print() => *end=' '*  !!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Syntactic sugar :\n",
+    "## list(i for i in (1, 2, 3)) => [i for i in (1, 2, 3)]\n",
+    "## set(i for i in (1, 2, 3)) => {i for i in (1, 2, 3)}\n",
+    "## tuple(i for i in (1, 2, 3)) => (i for i in (1, 2, 3))\n",
+    "## dict((i,i) for i in (1,2,3)) => {i:i for i in (1,2,3)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 3]"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(i for i in (1, 2, 3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(i for i in (1, 2, 3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i for i in (1, 2, 3, 3)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 2: 2, 3: 3}"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i:i for i in (1, 2, 3, 3)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 3)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(i for i in (1, 2, 3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object <genexpr> at 0x113657e60>"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(i for i in (1, 2, 3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object _make_gen at 0x113fcaaf0>"
+      ]
+     },
+     "execution_count": 177,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def _make_gen():\n",
+    "    for i in (1, 2, 3, 3):\n",
+    "        yield i\n",
+    "_make_gen() # same as above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 2: 2, 3: 3}"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict((i, i) for i in (1, 2, 3, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 1, 2: 2, 3: 3}"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "{i: i for i in (1, 2, 3)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## itertools module\n",
+    "### groupby"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A ['Alan', 'Adam']\n",
+      "W ['Wes', 'Will']\n",
+      "A ['Albert']\n",
+      "S ['Steven']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "first_letter = lambda x: x[0]\n",
+    "names = ['Alan', 'Adam', 'Wes', 'Will', 'Albert', 'Steven']\n",
+    "\n",
+    "for letter, names in itertools.groupby(names, first_letter):\n",
+    "    print(letter, list(names))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attempt_float(x):\n",
+    "    try:\n",
+    "        return float(x)\n",
+    "    except (TypeError, ValueError): # multiple error with one exception\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# File"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(path, 'w')\n",
+    "\n",
+    "try:\n",
+    "    write_to_file(f)\n",
+    "finally:\n",
+    "    f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(path, 'w')\n",
+    "\n",
+    "try:\n",
+    "    write_to_file(f)\n",
+    "except:\n",
+    "    print('Failed')\n",
+    "else:\n",
+    "    print('Succeeded')\n",
+    "finally:\n",
+    "    f.close()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
