add basic indexing and slicing of numpy

--- a/numpy_basics.ipynb
+++ b/numpy_basics.ipynb
@@ -15,8 +15,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 0.34912816,  0.75290143, -0.59311311],\n",
-       "       [-0.46746038, -1.04784882,  0.95658572]])"
+       "array([[ 0.00351044, -1.90470935,  0.64871039],\n",
+       "       [-0.87359687, -0.64563624, -1.83887091]])"
       ]
      },
      "execution_count": 2,
@@ -457,6 +457,547 @@
    ],
    "source": [
     "arr2 > arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Basic Indexing and Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.zeros((3,2))\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[64., 64.],\n",
+       "       [64., 64.],\n",
+       "       [64., 64.]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_values = arr.copy() # copy\n",
+    "arr[:] = 64 # change in place\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0.],\n",
+       "       [0., 0.],\n",
+       "       [0., 0.]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "old_values "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Boolean array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'], dtype='<U4')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.41108684,  0.04692426,  0.58096158,  0.64005975],\n",
+       "       [-1.86535294,  1.29904136,  0.43344688, -0.52963736],\n",
+       "       [-1.81885553,  1.50768453, -0.19794714,  0.66365444],\n",
+       "       [ 0.21012722, -0.02647   ,  0.58826982, -0.32197377],\n",
+       "       [ 1.85121011, -0.39216293,  1.15000898,  0.70698845],\n",
+       "       [ 0.7969093 , -1.08083373,  0.13471007,  0.97238882],\n",
+       "       [-3.08070718, -1.62722331,  0.82346654, -0.62977595]])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names = np.array(['Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])\n",
+    "data = np.random.randn(7,4)\n",
+    "display(names)\n",
+    "display(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Suppose each name corresponds to a row in the `data` array, and we want to select all the rows with corresponding name 'Bob'\n",
+    "\n",
+    "### Check the length of two arrays before selection, because boolean selection will not fail if the lenght is not correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names.shape[0] == data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True, False, False, False])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names == 'Bob' # !!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.41108684,  0.04692426,  0.58096158,  0.64005975],\n",
+       "       [ 0.21012722, -0.02647   ,  0.58826982, -0.32197377]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[names == 'Bob']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.41108684,  0.04692426],\n",
+       "       [ 0.21012722, -0.02647   ]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[names == 'Bob', :2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.64005975, -0.32197377])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[names == 'Bob', 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True, False,  True,  True,  True])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "names != 'Bob'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.86535294,  1.29904136,  0.43344688, -0.52963736],\n",
+       "       [-1.81885553,  1.50768453, -0.19794714,  0.66365444],\n",
+       "       [ 1.85121011, -0.39216293,  1.15000898,  0.70698845],\n",
+       "       [ 0.7969093 , -1.08083373,  0.13471007,  0.97238882],\n",
+       "       [-3.08070718, -1.62722331,  0.82346654, -0.62977595]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[~(names == 'Bob')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.86535294,  1.29904136,  0.43344688, -0.52963736],\n",
+       "       [-1.81885553,  1.50768453, -0.19794714,  0.66365444],\n",
+       "       [ 1.85121011, -0.39216293,  1.15000898,  0.70698845],\n",
+       "       [ 0.7969093 , -1.08083373,  0.13471007,  0.97238882],\n",
+       "       [-3.08070718, -1.62722331,  0.82346654, -0.62977595]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "condition = names == 'Bob'\n",
+    "data[~condition]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False,  True,  True,  True, False, False])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mask = (names == 'Bob') | (names == 'Will')\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.41108684,  0.04692426,  0.58096158,  0.64005975],\n",
+       "       [-1.81885553,  1.50768453, -0.19794714,  0.66365444],\n",
+       "       [ 0.21012722, -0.02647   ,  0.58826982, -0.32197377],\n",
+       "       [ 1.85121011, -0.39216293,  1.15000898,  0.70698845]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[mask]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting values with boolean arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 0.04692426, 0.58096158, 0.64005975],\n",
+       "       [0.        , 1.29904136, 0.43344688, 0.        ],\n",
+       "       [0.        , 1.50768453, 0.        , 0.66365444],\n",
+       "       [0.21012722, 0.        , 0.58826982, 0.        ],\n",
+       "       [1.85121011, 0.        , 1.15000898, 0.70698845],\n",
+       "       [0.7969093 , 0.        , 0.13471007, 0.97238882],\n",
+       "       [0.        , 0.        , 0.82346654, 0.        ]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data < 0] = 0 ## !!!!\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.        , 7.        , 7.        , 7.        ],\n",
+       "       [0.        , 1.29904136, 0.43344688, 0.        ],\n",
+       "       [7.        , 7.        , 7.        , 7.        ],\n",
+       "       [7.        , 7.        , 7.        , 7.        ],\n",
+       "       [7.        , 7.        , 7.        , 7.        ],\n",
+       "       [0.7969093 , 0.        , 0.13471007, 0.97238882],\n",
+       "       [0.        , 0.        , 0.82346654, 0.        ]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[names != 'Joe'] = 7\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fancy Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0.],\n",
+       "       [1., 1., 1., 1.],\n",
+       "       [2., 2., 2., 2.],\n",
+       "       [3., 3., 3., 3.],\n",
+       "       [4., 4., 4., 4.],\n",
+       "       [5., 5., 5., 5.],\n",
+       "       [6., 6., 6., 6.],\n",
+       "       [7., 7., 7., 7.]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.empty((8,4))\n",
+    "for i in range(arr.shape[0]):\n",
+    "    arr[i] = i\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To select out a subset of the rows in a particular order, you can simply pass a list or ndarray of integers specifying the desired order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4., 4., 4., 4.],\n",
+       "       [3., 3., 3., 3.],\n",
+       "       [0., 0., 0., 0.],\n",
+       "       [6., 6., 6., 6.]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[4, 3, 0, 6]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11],\n",
+       "       [12, 13, 14, 15],\n",
+       "       [16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23],\n",
+       "       [24, 25, 26, 27],\n",
+       "       [28, 29, 30, 31]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.arange(32).reshape(8,4)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Elements (1, 0), (5, 3), (7, 1), and (2, 2) were selected. Regardless of how many dimensions the array has, the result of fancy indexing is always one-dimensional."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 23, 29, 10])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[[1, 5, 7, 2], [0, 3, 1, 2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fancy indexing, unlike slicing, always `copies` the data into a new array."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transposing Arrays and Swapping Axes"
    ]
   },
   {
